fix overflow issue on drop-down; fix direction form so that it can update existing data

--- a/src/app/end-user/resource-item-metadata-modal/resource-item-metadata-modal.component.scss
+++ b/src/app/end-user/resource-item-metadata-modal/resource-item-metadata-modal.component.scss
@@ -1,5 +1,3 @@
-
-
 .image-info {
   //position: absolute;
   padding: 10px 10px 5px 10px;
@@ -28,6 +26,16 @@
   padding-top: 15px;
 }
 
+.divider {
+  background-color: grey;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.description {
+  padding-top: 5px;
+  padding-bottom: 15px;
+}
 
 
 
